compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_empty_match.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 425
expression: "\npub fn go(x) {\n  case x {\n    <<>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize === 0) {
    return 1;
  } else {
    return 2;
  }
}
