compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_binary_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1599
expression: "\npub fn go(x) {\n  case x {\n    <<_, a:2-bytes>> -> a\n    _ -> x\n  }\n\n  case x {\n    <<_, b:bytes-size(2)>> -> b\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_, a:2-bytes>> -> a
    _ -> x
  }

  case x {
    <<_, b:bytes-size(2)>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 8 && x.bitSize === 24) {
    let a = bitArraySlice(x, 8, 24);
    a
  } else {
    x
  }
  if (x.bitSize >= 8 && x.bitSize === 24) {
    let b = bitArraySlice(x, 8, 24);
    return b;
  } else {
    return x;
  }
}
