compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_bytes.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 450
expression: "\npub fn go(x) {\n  case x {\n    <<1, y>> -> y\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1, y>> -> y
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize >= 8 && x.byteAt(0) === 1 && x.bitSize === 16) {
    let y = x.byteAt(1);
    return y;
  } else {
    return 1;
  }
}
