compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_bytes_with_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1473
expression: "\npub fn go(x) {\n  case <<1, 2>> {\n    <<f:bytes-2>> -> f\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case <<1, 2>> {
    <<f:bytes-2>> -> f
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let $ = toBitArray([1, 2]);
  if ($.bitSize === 16) {
    let f = bitArraySlice($, 0, 16);
    return f;
  } else {
    return x;
  }
}
