compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_dynamic_bits_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1063
expression: "\npub fn go(x) {\n  let n = 16\n  case x {\n    <<a:bits-size(n)>> -> a\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  case x {
    <<a:bits-size(n)>> -> a
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let n = 16;
  if (n >= 0 && x.bitSize === n) {
    let a = bitArraySlice(x, 0, n);
    return a;
  } else {
    return x;
  }
}
