compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_dynamic_bytes_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1090
expression: "\npub fn go(x) {\n  let n = 3\n  case x {\n    <<a:bytes-size(n)>> -> a\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 3
  case x {
    <<a:bytes-size(n)>> -> a
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let n = 3;
  if (n * 8 >= 0 && x.bitSize === n * 8) {
    let a = bitArraySlice(x, 0, n * 8);
    return a;
  } else {
    return x;
  }
}
