compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_dynamic_size.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 951
expression: "\npub fn go(x) {\n  let n = 16\n  case x {\n    <<a:size(n)>> -> a\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  case x {
    <<a:size(n)>> -> a
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  let n = 16;
  if (n >= 0 && x.bitSize === n) {
    let a = bitArraySliceToInt(x, 0, n, true, false);
    return a;
  } else {
    return 1;
  }
}
